2011-10-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Add configure option ‘--disable-standalone-compat’.

	* Makefile.am (bin_SCRIPTS): Move inside ‘if BINBLOAT’.
	[!BINBLOAT] (noinst_DATA): New var.
	(CLEANFILES): Add sub.sh.
	(sub.sh): New target.

2011-10-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	grcs: Fix bug: Handle argv[0] w/o directory component.

	Omission from 2011-10-30, "New program: grcs".

	* super.c (recognize): Return a ‘submain_t *’.
	(main): Update call to ‘recognize’; for ‘argv[1]’, if there is
	a dir sep, use ‘argv[0]’ directly, otherwise ‘PEER_SUPER ()’.

2011-10-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[dist] Decruft: Don't distribute TAGS.

	* Makefile.am (EXTRA_DIST): Remove TAGS, $(TESTS).

2011-10-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New program: grcs

	* super.c: New file.
	* sub.TEMPLATE: New file.
	* Makefile.am (subs, bin_SCRIPTS): New vars.
	($(subs)): New target.
	(executables): Remove ci, co, rcs, rcsclean, rcsdiff, rcsmerge, rlog.
	(bin_PROGRAMS): Add grcs.
	(BUILT_SOURCES): Add $(subs:=.help), super.help.
	(grcs_SOURCES): New var.
	(CLEANFILES): Add $(subs).
	(EXTRADIST): Add sub.TEMPLATE.
	* b-peer.c (peer_co): Delete.
	(peer_super): New ‘struct symdef’.
	* b-peer.h (peer_co): Delete var decl.
	(peer_super): New var decl.
	(PEER_CO): Delete macro.
	(PEER_SUPER): New macro.
	* ci.c (top): Delete var.
	(ci_main): Rename from ‘main’; take arg ‘cmd’.
	(ci_aka): New var.
	* co.c (top): Delete var.
	(VX): Bump to 3.
	(buildjoin): Use ‘PEER_SUPER’ and "co".
	(co_main): Rename from ‘main’; take arg ‘cmd’.
	(co_aka): New var.
	* rcs.c (top): Delete var.
	(rcs_main): Rename from ‘main’; take arg ‘cmd’.
	(rcs_aka): New var.
	* rcsclean.c (top): Delete var.
	(rcsclean_main): Rename from ‘main’; take arg ‘cmd’.
	(rcsclean_aka): New var.
	* rcsdiff.c (top): Delete var.
	(COMMAND_LINE_VARYING): Bump constant to 4.
	(rcsdiff_main): Rename from ‘main’; take arg ‘cmd’;
	use ‘PEER_SUPER’ and "co".
	(rcsdiff_aka): New var.